# mcp-proxy

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY_TODO.md  TEST_RULES.md  index.html  package-lock.json  package.json  playwright.config.ts  rules.md  vitest.config.ts
.github/workflows/: ci.yml  release.yml
crates/mcp-proxy-agent/: Cargo.toml
crates/mcp-proxy-agent/src/: main.rs
crates/mcp-proxy-cli/: Cargo.toml  build.rs
crates/mcp-proxy-cli/src/: docker.rs  main.rs  sandbox.rs
crates/mcp-proxy-cli/tests/: cli_integration.rs  e2e_stdio_pipe.rs  sandbox_exec.rs
crates/mcp-proxy-common/: Cargo.toml
crates/mcp-proxy-common/src/: audit.rs  client_read.rs  invocation_log.rs  lib.rs  local_backend.rs  models.rs  preferences.rs  secret_resolver.rs  session.rs  store.rs  vault.rs
docs/: SECURITY_TODO.md  e2e-manual.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  store.rs  tray.rs  vault_events.rs
src-tauri/src/commands/: logs.rs  (+9 more)
src/data/: registry.ts
src/hooks/: useAutostart.ts  useIdleLock.ts  useIsMacos.ts  useSecrets.ts  useServers.ts  useVault.ts  useVaultIdleTimeout.ts  useVaultStatusSync.ts
src/lib/: tauri.ts  types.ts
src/pages/: Activity.tsx  ConfigGenerator.tsx  Dashboard.tsx  SecretsManager.tsx  ServerConfig.tsx  Settings.tsx
tests/e2e/: config.spec.ts  dashboard.spec.ts  secrets.spec.ts  servers.spec.ts  settings.spec.ts  setup.ts
(+12 files in other folders)
