[package]
name = "mcp-proxy-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-proxy"
path = "src/main.rs"

[dependencies]
mcp-proxy-common = { path = "../mcp-proxy-common" }
tokio = { version = "1", features = ["rt", "macros", "process"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = "1"
