[package]
name = "mcp-proxy-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["apple-native"] }
tokio = { version = "1", features = ["rt", "process", "macros"] }
dirs = "5"
tracing = "0.1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
